[build-system]
requires = ['flit']
build-backend = 'flit.buildapi'

[tool.flit.metadata]
module = 'chunli'
author = 'Recommedations Squad'
author-email = 'bob@luizalabs.com'
home-page = 'https://github.com/luizalabs/chunli'
classifiers = []  # see https://pypi.org/classifiers/
requires = ['apidaora', 'confdaora', 'aioredis', 'httpx', 'numpy']
description-file = 'README.md'
requires-python = '>=3.8'

[tool.flit.metadata.urls]
Documentation = 'https://luizalabs.github.io/chunli/'  # doc url

[tool.flit.metadata.requires-extra]
test = [
    'black',
    'bumpversion',
    'flake8',
    'isort',
    'ipython',
    'mypy',
    'pytest-cov',
    'pytest-mock',
    'pytest>=5.1.1'
]
doc = [
    'mkdocs',
    'mkdocs-material',
    'markdown-include'
]
dev = [
    'cython==0.29.13',
    'uvicorn==0.9.0'
]

[tool.isort]
case_sensitive= '1'
use_parentheses = '1'
line_length = '79'
order_by_type = '1'
multi_line_output = '3'
include_trailing_comma = '1'
lines_after_imports = '2'
atomic = '1'

[tool.black]
exclude = '''
    \.pyi
'''
target-version = ['py38']
line-length = '79'
skip-string-normalization = '1'
